# E2E-QA-Chatbot-OLLAMA-and-Open-Source-Models

./: ollama_app.py  pyproject.toml
.devcontainer/: devcontainer.json
utils/: langchain_tracking.py  prompt_enginering.py  response.py
